# yj-dev_sentinel

./: .gitignore  CHANGELOG.md  FORCE.spec.md  FORCE_DEVELOPMENT_SUMMARY.md  FORCE_SUCCESS_REPORT.md  LICENSE-MIT.md  README.md  README.md.new  YUNG_spec.md  code_doc_inspector_agent_spec.md  compare_validation.py  demo_integrated_validation.py  detailed_validation.py  dev_sentinel_design_document.md  force_doc_sync.py  force_fix_efficiency_demo.py  path_setup.py  pyproject.toml  readme_inspector_agent_spec.md  run_server.py  validate_force_tool.py  validate_force_tools_demo.py  vantage.force  vc_listener_agent_spec.md  vc_master_agent_spec.md
.force/: AGENTIC_COMPONENT_EXTRACTION_GUIDE.md  force.config.json  validation_report.json
.force/components/: event-driven-messaging-handler.json
.force/constraints/: atomic_commit_constraint.json  docker-requirement-for-functions.json  mcp_protocol_compliance.json  memory_prompt_protocol.json  memory_rating_protocol.json  schema_backward_compatibility.json  supabase-cli-linked-constraint.json  validation_quality_maintenance.json
.force/governance/: __init__.py  system-governance.json
.force/learning/: development-learning.json  documentation-implementation-sync.json  edge_function_deployment_success.md  execution-analytics.json  iterative_development_insights.json  mcp_troubleshooting_insights.json
.force/milestones/: phase2-database-infrastructure-complete.json  phase_2_completion_summary.md
.force/patterns/: agent_prompt_pattern.json  atomic_commit_grouping.json  branch_task_end_tasks.json  chat_prompt_pattern.json  continuous_changelog_pattern.json  documentation-patterns.json  git_tasks_workflow.json  grouped_commit_workflow.json  handoff_documentation_pattern.json  iterative_enhancement_workflow.json  mcp_integration_pattern.json  pattern.cluely.default.json  (+2 more)
.force_backup_20250709_005429/: validation_report.json
.force_backup_20250709_005556/: README.md  validation_report.json
config/: fastagent.config.yaml  fastagent.secrets.yaml  pyproject.toml  requirements.txt
core/: agent.py  message_bus.py  task_manager.py
dev_sentinel/: __init__.py  cli.py  force
docs/: DEPLOYMENT_QUICK_REFERENCE.md  README.md  YUNG_spec.md  deployment.md  force-v0.3.0-update.md  index.md
force/: FORCE.spec.md  FORCE_TOOLS_README.md  __init__.py  force_grouped_commit.py  force_project_migration.py  legacy_adapter.py  tool_executor.py  version.py  view_force_tools.py  view_git_tools.py  yung_integration.py
integration/: __init__.py  diagram_generator.py  terminal_manager.py
scripts/: analyze_force_completion.sh  force.py  force_demo.py  force_git_task.py
tests/: test_force_engine.py  test_force_system.py
utils/: file_utils.py  vcs_utils.py
(+359 files in other folders)
